@@ -18,26 +18,25 @@ import static org.junit.jupiter.api.Assertions.*;
 public class LoginControllerTest {
 
     private LoginController controller;
-    private static final Path USER_FILE = Paths.get("user.txt");
-    private static final Path BACKUP_FILE = Paths.get("user_backup.txt");
+    private static final Path USER_FILE = Paths.get("src/test/resources/UserInfo_test.txt");
+    private static final Path BACKUP_FILE = Paths.get("src/test/resources/UserInfo_test_backup.txt");
 
     @BeforeEach
     void setup() throws IOException {
-        // 기존 user.txt 백업
-        if (Files.exists(USER_FILE)) {
-            Files.copy(USER_FILE, BACKUP_FILE, StandardCopyOption.REPLACE_EXISTING);
-        }
-
-        // 테스트용 유저 데이터 생성
-        String userFileContent = """
-            20212991\t1234\tS
-            12345\tprofpass\tP
-            admin\tadminpass\tA
-            20210322\t2242\tS
+        // 테스트용 유저 데이터 작성
+        String testData = """
+            P,김성우,12345,1234
+            S,이지민,20233065,1234
+            P,권순각,23456,1234
+            S,이규찬,20212977,1234
+            S,심동진,20212991,1234
             """;
-        Files.write(USER_FILE, userFileContent.getBytes());
+        Files.writeString(USER_FILE, testData);
 
-        controller = new LoginController(); // LoginController는 기본 생성자 사용
+        // 백업 저장
+        Files.copy(USER_FILE, BACKUP_FILE, StandardCopyOption.REPLACE_EXISTING);
+
+        controller = new LoginController(); // 기본 생성자 사용
     }
 
     @AfterEach
@@ -45,28 +44,22 @@ public class LoginControllerTest {
         if (Files.exists(BACKUP_FILE)) {
             Files.copy(BACKUP_FILE, USER_FILE, StandardCopyOption.REPLACE_EXISTING);
         } else {
-            Files.deleteIfExists(USER_FILE); // 백업이 없다면 그냥 삭제
+            Files.deleteIfExists(USER_FILE);
         }
     }
 
-    /**
-     * 테스트용이기 때문에 True,False를 따지지않고 True만을 사용하여 성공 실패를 판별함.
-     *
-     */
     @Test
-    public void testValidStudentLogin() {
-        LoginStatus result = controller.authenticate("20212991", "1234", "S");
+    public void testValidProfessorLogin() {
+        LoginStatus result = controller.authenticate("12345", "1234", "P");
         assertTrue(result.isLoginSuccess(), "성공.");
     }
 
-    //Fail   -> assertTrue로 Test중 실패로 봤기에 실패가 맞음.
     @Test
     public void testInvalidRoleWordShouldFail() {
         LoginStatus result = controller.authenticate("20210322", "2242", "STUDENT");
-        assertFalse(result.isLoginSuccess(), "실패");
+        assertFalse(result.isLoginSuccess(), "실패.");
     }
 
-    //Fail   -> assertTrue로 Test중 실패로 봤기에 실패가 맞음.    
     @Test
     public void testInvalidIdLength() {
         LoginStatus result = controller.authenticate("shortid", "1234", "S");
@@ -74,11 +67,14 @@ public class LoginControllerTest {
     }
 
     @Test
-    public void testValidProfessorLogin() {
-        LoginStatus result = controller.authenticate("12345", "profpass", "P");
+    public void testValidStudentLoginFail() {
+        LoginStatus result = controller.authenticate("20212991", "", "S");
+        assertFalse(result.isLoginSuccess(), "실패.");
+    }
+
+    @Test
+    public void testValidStudentLogin2() {
+        LoginStatus result = controller.authenticate("20212977", "1234", "S");
         assertTrue(result.isLoginSuccess(), "성공.");
     }
-    /*
-    RUN 5 FAIL 2
-     */
 }
